--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "click-me-once",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://click-me-once.herokuapp.com",
+  "homepage": "https://braydenc303.github.io/click-me-once/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
@@ -13,7 +14,9 @@
     "build": "react-scripts build",
     "heroku-postbuild": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
